--- a/clox/CMakeLists.txt
+++ b/clox/CMakeLists.txt
@@ -3,4 +3,13 @@ project(clox C)
 
 set(CMAKE_C_STANDARD 23)
 
-add_executable(clox main.c)
+add_executable(clox main.c
+        common.h
+        chunk.h
+        chunk.c
+        memory.h
+        memory.c
+        debug.h
+        debug.c
+        value.h
+        value.c)
